--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   set(CXX_EXTENSIONS NO)
 endif()
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall")
+
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/evohomeclient)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/evohomeclient)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "")
